A.F....... [ZBXNEXT-3274] fixed visibility of trigger(prototype) fields; fixed enabling/disabling of triggers
git-svn-id: svn://svn.zabbix.com/trunk@61430 97f52cf1-0a1b-0410-bd0e-c28be96e8082

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3052,6 +3052,9 @@ a.blue {
 	padding: 2px 3px;
 	text-align: center;
 	line-height: 1em;
+	max-width: 133px;
+	vertical-align: middle;
+	@extend %overflow-ellipsis;
 	@include border-radius(2px);
 
 	&:last-child {
